# selenium_practice

./: .gitignore  README.md  pyproject.toml  scraping.py
src/: dl_from_json.py  parse.ipynb  resource.py  scraping.py
tests/: test_scrape.py
